APPS-260 crop too long inputs, fix bottom of the shadow
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@66447 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/av-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/av-styles.scss
@@ -528,12 +528,17 @@ $duration: 0.2s;
             width: 800px;
             margin-left: auto;
             margin-right: auto;
-            min-height: calc(100% - 28px);
+            min-height: calc(100% - 24px);
+            box-sizing: border-box;
+            /** padding to make sure shadow goes to the very bottom when keyboard is open */
+            padding-bottom: 52px; 
             background: $white;
             margin-top: 24px;
             padding-top: 4px;
-            border-radius: 4px;
+            border-top-right-radius: 4px;
+            border-top-left-radius: 4px;
             box-shadow:  0px 0px 5px 1px rgba(0,0,0,0.2);
+            overflow-x: hidden;
         }
     }
 
